2008-11-10  Catherine Moore  <clm@codesourcery.com>

	* gcc.target/mips/no-smartmips-lwxs.c: New test.
	* gcc.target/mips/no-smartmips-ror-1.c: New test.

2008-11-10  Kaz Kojima  <kkojima@gcc.gnu.org>

	* gcc.target/sh/pr37514.c: New test.

2008-11-10  Eric Botcazou  <ebotcazou@adacore.com>

	* g++.dg/other/anon5.C: Skip on Solaris.

2008-11-10  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/pack11.adb: New test.

2008-11-10  Jakub Jelinek  <jakub@redhat.com>

	PR c++/38021
	* g++.dg/cpp0x/enum1.C: New test.

2008-11-02  Ralph Loader  <suckfish@ihug.co.nz>

	PR middle-end/37807
	PR middle-end/37809
	* gcc.target/i386/mmx-8.c: New test.

2008-11-09  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/37836
	* gfortran.dg/minmaxval_1.f90: New test.

2008-11-09  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/loop_boolean.adb: New test.

2008-11-07  Thomas Quinot  <quinot@adacore.com>

	* gnat.dg/hyper_flat.adb: New test.

2008-11-07  Geert Bosch  <bosch@adacore.com>

	* gnat.dg/test_8bitlong_overflow.adb: New test.

2008-11-07  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* g++.dg/ipa/iinline-1.C: Remove -c flag, add -fpie for PIC targets.

	* gcc.dg/tree-ssa/inline-2.c (foo): Add 'inline' keyword.

2008-11-06  Sebastian Pop  <sebastian.pop@amd.com>

	* gcc.dg/graphite/pr37943.c: Fix missing end of file.

2008-11-06  Joseph Myers  <joseph@codesourcery.com>

	* gcc.dg/utf-array-short-wchar.c, gcc.dg/utf-cvt.c,
	gcc.dg/utf-inc-init.c, gcc.dg/utf16-1.c, gcc.dg/utf16-2.c,
	gcc.dg/utf16-3.c, gcc.dg/utf16-4.c, gcc.dg/utf32-1.c,
	gcc.dg/utf32-2.c, gcc.dg/utf32-3.c, gcc.dg/utf32-4.c: Use
	__CHAR16_TYPE__ and __CHAR32_TYPE__ typedefs.

2008-11-06  Richard Guenther  <rguenther@suse.de>

	* gcc.dg/torture/pr37969.c: New testcase.

2008-11-05  Janis Johnson  <janis187@us.ibm.com>

	* lib/c-torture.exp: Use ADDITIONAL_TORTURE_OPTIONS if defined.
	* lib/gcc-dg.exp: Ditto.
	* lib/fortran-torture.exp: Ditto.
	* lib/objc-torture.exp: Ditto.
